Scala Assignments/1.Codingbat/16. Recursion-1/24.stringClean.txt
--Java

public String stringClean(String str) {
  if(str.length()<2)
  {
    return str;
  }
  else if(str.charAt(0)==str.charAt(1)) 
  {
   return stringClean(str.substring(1)); 
  }
  else
  {
    return str.charAt(0)+stringClean(str.substring(1));
  }
}


--Scala

scala> def stringClean(str:String):String={
     | if(str.length()<2) 0
     | else if(str.charAt(0)==str.charAt(1))
     | stringClean(str.substring(1))
     | else str.charAt(0)+stringClean(str.substring(1))}
<console>:12: error: type mismatch;
 found   : Int(0)
 required: String
       if(str.length()<2) 0
                          ^

scala> def stringClean(str:String):String={
     | if(str.length()<2) str
     | else if(str.charAt(0)==str.charAt(1))
     | stringClean(str.substring(1))
     | else str.charAt(0)+stringClean(str.substring(1))}
stringClean: (str: String)String

scala> stringClean("aabbccddee");
res3: String = abcde
